# Rechnungen

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: build.yml
docs/: steuerlicher-leitfaden.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit.rs  audit_commands.rs  backup_commands.rs  bank_commands.rs  bank_import.rs  erechnung_commands.rs  imap_commands.rs  imap_pool.rs  keyring_commands.rs  lib.rs  main.rs  pdf_commands.rs  system_commands.rs  xrechnung.rs  xrechnung_parser.rs  zugferd.rs
src/components/: AppErrorBoundary.tsx  BackupProgressOverlay.tsx  GeminiConsentDialog.tsx  GeminiConsentProvider.tsx  ShortcutsModal.tsx  UpdateDialog.tsx
src/hooks/: useCategoryList.ts  useChatContext.ts  useDashboardData.ts  useInvoices.ts  useKeyboardShortcuts.ts
src/lib/: afa.ts  backup.ts  db.ts  defaultTemplates.ts  emailDate.ts  epcQrCode.ts  export.ts  gemini.ts  geocoding.ts  gmail.ts  gobd-export.ts  googleCalendar.ts  helpContent.ts  imap.ts  keyring-migration.ts  keyring.ts  lineItems.ts  patternDetection.ts  pdf.ts  pdfExport.ts  queryKeys.ts  updater.ts  ustva.ts  utils.ts  xrechnung.ts
src/pages/: AllInvoices.tsx  BankImport.tsx  ByCategory.tsx  ByYear.tsx  Calendar.tsx  Customers.tsx  Dashboard.tsx  Fahrtenbuch.tsx  Gmail.tsx  Help.tsx  InvoiceDesigner.tsx  Krankenkasse.tsx  Lists.tsx  ProjectDetail.tsx  Projects.tsx  Revisionsprotokoll.tsx  Settings.tsx  Steuerbericht.tsx  (+1 more)
(+107 files in other folders)
