[package]
name = "rechnungs-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rechnungs_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-oauth = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdf-extract = "0.7"
base64 = "0.22"
imap = { version = "2", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
mailparse = "0.15"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder"] }
tokio = { version = "1", features = ["rt"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-keyring = "0.1"
sha2 = "0.10"
quick-xml = { version = "0.36", features = ["serialize"] }
lopdf = "0.32"
roxmltree = "0.20"
csv = "1.4.0"

